--- a/2022/MediaRepresentationV/mr5_03.md
+++ b/2022/MediaRepresentationV/mr5_03.md
@@ -1,3 +1,99 @@
 # メディア表現V 3. モデリング
 
 [メディア表現V TOPに戻る](./index.md)
+
+---
+
+---
+
+
+## モデリングの方法
+- 大きく分けるとEdit ModeとSculpt Modeがある。
+- Edit Modeは3つ以上の点で作られる面を組み合わせて形状を作る
+- Sculptは粘土細工・彫刻のように、盛り上げたり削ったりして形状を作る
+- この演習ではSculptは扱わない
+
+## ポリゴンモデリング
+- ポリゴン(多角形)の集まりをメッシュと呼ぶ
+- 多角形は頂点・辺・面から成り立っている
+
+- 頂点・辺・面(1,2,3でモード切り替え)の移動・回転・スケールはG,R,S
+- E(Exlude)で押し出し
+- I(Inset)で面の差し込み
+- Ctrl-Rでループカット
+- Ctrl-Bでベベル
+- Option-右クリックでループ選択
+
+- 右クリックでsubdivideでポリゴンを細分化できる
+- ModifierのSubDivision Surfaceで、非破壊的に滑らかにできる
+- 滑らかに見せるのは、ObjectモードでShade Smooth
+
+
+## ワイングラスを作ってみよう
+線を描いてScrewで作る方法を見せてから
+
+- Edit - preferences - Add ons
+- imagesを検索
+- Import-Exmport Import images as Planesにチェック
+- Import - Images as Planesでワイングラスの写真を選択
+- マテリアルプレビューモードに
+- S 10で10倍に, G-Xで少し後ろに、G-Zで少し上にあげてZ=0のところにグラスの下をあわせる
+
+- Shift+AでCircle
+- 円を選択して、TABキーでEditモードに
+- Fで面をつくる
+- 右上のXを押して、X軸側からにする
+- Sで、グラスの足の大きさにあわせる
+- Eで少し上に押し出し(Z軸方向)
+- Eでさらに上に押し出し(Z軸方向)
+- Sでサイズをあわせる
+- これを繰り返して、グラスの外側をつくる
+
+## 台を作ってみよう
+- Shift+AでPlane
+- S 10 で10倍に
+- Tabで編集モードに入り、2で辺編集モード
+- 奥の辺を選んで、E Z で押し出し
+- 交差する辺を選んでCtrl-Bでベベル スクロールでカーブに
+- Tabでオブジェクトモードに戻り、右クリック Shade smoothで滑らかに
+
+## ワイングラス・台に材質を設定しよう
+https://kemarii.com/blog/cg/blender-glass-material/
+
+
+## ライトをあててみよう
+
+
+時間がある人は最後にワインを注いでみよう
+
+## 好きな形を作るには？
+- まずは、いろんな人のモデリングを真似しよう
+- 一つの形を作るにもいろいろな作り方あるよ
+- 曲面を作る時には滑らかにする方法がshade smooth, subdivision surface, と方法があることをしっておこう
+- ポリゴン数はなるべく少ない状態で大まかな形からディテイルに作業した方が効率よいよ
+
+## 簡単に人もどきを作りながら慣れてみよう
+立方体から人型を作ってみよう
+
+
+
+## (おまけ)グラスにワインを注ごう
+液体の表現には
+1. 流体が出るところ
+2. 流体を妨げるもの
+3. 計算する範囲
+の3つが必要だよ
+
+
+
+
+## Low Poly Character
+https://www.youtube.com/watch?v=Ljl_QFs9xhE
+https://www.youtube.com/watch?v=Z3vdQj06DGo
+
+## 気をつけること
+- ポリゴン数を増やしすぎない
+- 減らすリポトロジーという技術もある
+
+## Monster Mash
+https://paiza.hatenablog.com/entry/2021/04/07/150000
