--- a/2022/MediaRepresentationV/mr5_04.md
+++ b/2022/MediaRepresentationV/mr5_04.md
@@ -1,3 +1,24 @@
 # メディア表現V 4. モディファイア
 
 [メディア表現V TOPに戻る](./index.md)
+
+---
+
+---
+
+## モディファイアとは？
+- ポリゴンに手を加えずに、形状等に変化を非破壊的に与えるもの
+- 非破壊的なので、有効にしなければ元に戻るよ
+- Modify/Generate/Deform/Physicsのカテゴリに分かれているよ
+- 今日はGenerate/Physicsを中心にみていこう
+- Scaleが1ではない状態のものは、うまくかからないことがあるので、コマンド-AでScaleとしてからにしよう
+
+## Scaleが1でないベベルの例
+Scaleが1以外の場合、モディファイアが当たってからScaleされるので、思い通りにならないことがあります。Command+AでScaleを適応してみましょう。
+
+## 階段 + particlesystem + colllision
+
+## skin
+キャラクタ簡単につくれちゃいますね。Rigもいけちゃうぞー
+
+https://www.youtube.com/watch?v=BXSD4LLtKfw
