--- a/2022/MediaRepresentationV/mr5_05.md
+++ b/2022/MediaRepresentationV/mr5_05.md
@@ -1,3 +1,81 @@
 # メディア表現V 5. マテリアルとテキスチャ
 
 [メディア表現V TOPに戻る](./index.md)
+
+---
+
+---
+
+
+## マテリアル/テキスチャ
+共に、形状ではなく見た目をコントロールするためのものですが、
+- マテリアルは物質の質感
+- テキスチャは模様
+とざっくり考えて良いです。
+
+なお、シェーディング(陰影処理)を行うシェーダーという概念もありますが、
+「シェーダー」+「テキスチャ」=「マテリアル」
+くらいになんとなく思っておきましょう。
+
+さて、これまで造形基礎演習などで質感について学習してきましたが、質感ってなんでしょう？
+- ベースとなる色
+- 金属?非金属?
+- 表面の粗さ
+- 透過 及び 屈折率
+など様々な要素が複合的にからみあっています。
+
+- ゴム
+- プラスチック
+- 金属
+- ガラス
+
+など、基本的な設定について試してみましょう。なお、レンダリングエンジンCyclesの方が圧倒的に表現力が上ですが、処理速度的にはEeveeが優れていて、質もそこそこなので、Eeveeで試します。
+
+## スザンヌ色々+左右違うマテリアル
+https://www.youtube.com/watch?v=DsNZzUZPhw4
+https://light11.hatenadiary.com/entry/2019/03/25/214201
+https://hainarashi.hatenablog.com/entry/2020/06/30/130241
+
+### Principled BSDF
+Base Color: 基本となる色
+Metalic: 金属？非金属?
+Specular: 光沢
+Roughness: 表面の粗さ(コート・マット)
+Transmission: 透明度
+Emission: 放射
+
+#### ゴム
+#### 光沢のあるプラスチック
+#### マットなプラスチック
+#### 鏡
+#### 鈍い光沢の金属
+#### ガラス
+#### すりガラス
+
+## B3DMatPack便利なの紹介しておくか(どうしようCyclesじゃないとだめかも)
+https://www.youtube.com/watch?v=Zni54zJMnJY
+
+
+
+## サイコロを作る(UV展開)
+複雑な場合には、シームというのを作り、どこで切り開くかを指示します。
+今回は簡単な立方体に画像を描いてみましょう。
+
+https://www.youtube.com/watch?v=gV-E0XJUTWg
+作ったら、大量にふりたくなるよね...いや、ならないw
+
+
+## JSplacement紹介しときたい..(+α)
+画像を用意するとこんなこともできます。
+Node Wrangler(Ctrl+Shift+T) color, normal
+https://www.youtube.com/watch?v=ocpOZ6dc0Hs
+
+## Lily Surface Scrapper
+https://indiegamesjp.dev/?p=1864
+
+## memo
+きのこ捨てがたいなぁ....サイコロのあとこっちか？
+UV展開必要だし
+
+https://www.youtube.com/watch?v=4d4N8d4ki2Y
+
