--- a/2022/MediaRepresentationV/mr5_06.md
+++ b/2022/MediaRepresentationV/mr5_06.md
@@ -1,3 +1,43 @@
 # メディア表現V 6. キーフレームアニメーション・カメラ切り替え
 
 [メディア表現V TOPに戻る](./index.md)
+
+---
+
+---
+
+
+## キーフレームアニメーション
+- viewportでiを押して、何にキーフレームを打つか(位置・回転・スケール)を選択
+- プロパティの上にマウスを置いて、iを押すことで、全てのパラメータにキーフレームを打つことも可能。
+
+## 紙飛行機飛ばしてみよう。
+- 最初は、普通に(グラフエディター)
+- curve作って、Add Object ConstraintからFollow Path
+
+## カメラで紙飛行機を追ってみよう
+- Add Object ConstraintからTrack To
+
+## カメラを切り替えてみよう
+- タイムラインでマーカーを追加
+- カメラを選択
+- Bind Camera to Marker
+
+## アニメーションで利用するエディタ
+- タイムライン
+- ドープシート
+- グラフエディタ
+- NLAエディタ
+https://note.com/info_/n/n3485c541285c
+
+## 時間軸を扱うエディター
+- ドープシート → キーフレームを直接編集できアニメーション編集に特化している。
+- グラフエディター → 主にアニメーションの動き方を編集するのに特価している
+- NLAエディター → アニメーションをひとかたまりにしたアクションを組み合わせることができる。アクションはトラックで管理されいろいろな動画編集ライクにアニメーションを作成することができる。
+- タイムライン → タイムラインは主にキーフレームの表示、アニメーションの再生などに特化しており、編集機能はほぼない
+http://xn--u9j207iixgbigp2p.xn--tckwe/archives/7518
+
+
+## 二つのアニメを組み合わせてみよう
+
+
