--- a/2022/MediaRepresentationV/mr5_07.md
+++ b/2022/MediaRepresentationV/mr5_07.md
@@ -1,3 +1,20 @@
 # メディア表現V 7. シェープキーアニメーション
 
 [メディア表現V TOPに戻る](./index.md)
+
+---
+
+---
+
+
+## シェープキーアニメーション
+頂点の移動量を決めといて、それでアニメーションする方法
+
+## スザンヌの目と口を動かしてみよう
+https://www.youtube.com/watch?v=e675Ulc7QL4
+
+## まぶたを動かしてみよう
+
+
+## おまけ
+https://www.youtube.com/watch?v=61QUzH34l1I
