--- a/2022/MediaRepresentationV/mr5_08.md
+++ b/2022/MediaRepresentationV/mr5_08.md
@@ -1,3 +1,45 @@
 # メディア表現V 8. アーマチュア・IK・リグ
 
 [メディア表現V TOPに戻る](./index.md)
+
+---
+
+---
+
+
+
+## アーマチュア・ボーン・リグ
+https://www.yamato-tsukasa.com/entry/b3d-armature-bone-rig-diff
+
+親子関係
+
+
+## アーマチュアを設定してみよう
+ありもののキャラに設定
+
+## IK FKとは？
+IKをボーンだけで確認
+
+
+## キャラにIKを設定してみよう
+キャラにIKを設定してみよう
+
+## pose library
+最初にポーズを決めといて、アニメーションに使える
+指定されたボーンに対してなので、手だけ、とか設定可能
+全体なら、Aで全部選択
+NでCreatePoseAssetで追加できるが、管理はAssetBrowserでやらないと
+サムネは、CameraViewとなる
+
+## Rigfyについて(おまけ)
+
+https://www.yamato-tsukasa.com/entry/b3d-armature-bone-rig-diff
+
+https://3dcg.comaroku.com/blender-rigfy-setup/
+
+## MOCAP
+- モーションキャプチャ
+- Plaskという技術もある
+
+## Cascadeur
+
