--- a/2022/MediaRepresentationV/mr5_09.md
+++ b/2022/MediaRepresentationV/mr5_09.md
@@ -1,3 +1,69 @@
 # メディア表現V 9.  ライティング・レンダリング
 
 [メディア表現V TOPに戻る](./index.md)
+
+---
+
+---
+
+
+## Lightの種類
+- Point
+- Sun
+- Spot
+- Area
+
+## レンダリング
+静止画・動画・他に持っていくとき(EXR)etc.
+
+## Cycles/Eevee違い
+- Cyclesの方が綺麗だけど遅い
+- 静止画ならよいが、動画はEevee推奨
+- マテリアルもCyclesでないとちゃんと表示できないものもあるので注意
+
+## モデルdownload
+https://open3dmodel.com/ja/3d-models/healthy-man-full-body_40403.html
+
+ダウンロードしづらい。目とパンツのメッシュある？
+1. ダウンロードリンクのテキストをクリック
+2. グレーアウトしてみえるダウンロードをクリック
+3. Objをインポートした後、Textureを貼ってあげないといけない
+Body_Subdermal.jpg
+を貼ればとりあえずどうにかなる
+Bump->normal?
+(質感に関して、もうちょいやりたい)
+
+
+## 3点ライトやってみよう
+- KeyLight
+- FillLight
+- BackLight
+- (BackgroundLight)
+
+https://www.youtube.com/watch?v=_bWYZ3lrGHI
+
+## レンブラントライティング
+https://shuffle.genkosha.com/technique/lighting/7342.html
+
+これは厳しいか？
+
+## カメラの焦点距離,F値等
+Filmic, 標準
+
+
+## HDRI
+https://reflectorange.net/archives/041.html
+説明とレンダリングに反映されるされないがわかればいいかな。
+
+https://polyhaven.com/
+
+
+## CyclesだとnodeでblackbodyでKelvin使える
+
+## 連番ファイル
+## 様々なレンダリング方法
+https://www.3dcgnya.com/entry/Blender/RenderPass
+## EXRファイル
+http://dekapoppo.blogspot.com/2017/06/blenderexr.html
+## passes
+https://docs.blender.org/manual/en/latest/render/layers/passes.html
