--- a/2022/MediaRepresentationV/mr5_10.md
+++ b/2022/MediaRepresentationV/mr5_10.md
@@ -1,3 +1,72 @@
 # メディア表現V 10. グリースペンシル
 
 [メディア表現V TOPに戻る](./index.md)
+
+---
+
+---
+
+
+## 何ができる？
+https://www.youtube.com/watch?v=1G4jwD1-c1k
+
+- 絵が描ける-3D空間に配置される
+- 中割
+
+## 始め方
+最初にGeneralでなく2D Animationを選ぶかまたは
+- General
+- 「-Y」がみえるように(視点は動かないほうが良い)
+- Shift+AでGreasePencil - Blank (このオブジェクトに描いてくイメージ)
+- Draw Modeに変更
+- 背景色はViewportShading->Matcap->Viewportで色を変更
+- nでサイドパネルを開いてTool
+- ブラシや色を変更して描くことができる
+- Photoshop的ではなく、Illustrator的に線は管理されている
+- 色はマテリアルで管理されていることに注意
+- レイヤーあるよ(プロパティのとこ二つに分けたほうが使いやすいかも)
+- フィルはIllustratorとちょい考え方が異なる。
+-  Line, Fillレイヤーに分ける方法、一つのマテリアルで指定する方法使い分けが必要かな
+-  消しゴムも、頂点を消す方法と、普通の消しゴムがあったりする
+  
+- 形状(線・円など)も癖ある。
+- 書いた後、超点数をコントロールできる (トラックパッドだと失敗。マウスホイール必要か？)
+- 頂点でいじりたい時は、エディットモードへ
+
+## 基本
+https://www.youtube.com/watch?v=sMKW--36sN0
+
+## 2Dアニメーション
+https://www.youtube.com/watch?v=jictosxDcCg
+### オブジェクトアニメ
+- アーマチュア追加
+- Ctrl+Pで親子づけ
+- 自動ウェイトはうまくいかないので、空のグループ
+- ウェイトペイントで、辺を赤くする。
+- あとは、ポーズモードで基本同じ
+- ボーンコンストレインとで体積維持とかできる
+
+### 普通のアニメ(セル画)
+- ドープシートでグリースペンシルモードに
+- 追加すると自動でキーフレーム追加(オニオンスキンあり)
+- EditModeだと、頂点動かせるし、プロポーショナル編集がつかえるので、まわりをひきづることもできる
+- モディファイアも使えるよ(ビルドとかノイズとか)
+
+参考URLを貼っておいて、全部網羅しなくていいようにしよう
+
+
+### 棒人間？
+- ウェイトペイントが特殊だけど、他一緒
+
+## 自動補完やってみよう
+https://www.youtube.com/watch?v=xp4BcAaqCgQ
+- 2D Animationで新規
+- 0Frameと60Frameとかに絵を描く(動くの対応して書いたほうがよさげ)
+- Interpolateツールで、前後のフレームで対応したのを順にセレクト
+- 10フレームとかにして、左クリックで右にドラッグで、キーフレーム追加
+- Interpolate Sequenceで勝手に埋めることも可能
+
+https://www.youtube.com/watch?v=Tscvf_uc5LU
+
+## どう使えるの？
+https://www.youtube.com/watch?v=ninu1gRHmyY
