--- a/2022/MediaRepresentationV/mr5_11.md
+++ b/2022/MediaRepresentationV/mr5_11.md
@@ -1,3 +1,83 @@
 # メディア表現V 11. 物理演算・パーティクル
 
 [メディア表現V TOPに戻る](./index.md)
+
+---
+
+---
+
+
+## 物理演算できること
+- フォースフィールド
+- コリジョン
+- クロス
+- ダイナミックペイント
+- ソフトボディ
+- 流体
+- リジットボディ
+
+リジットボディと流体は実はもうやってしまったね。
+使いこなした例はみせよう。全部は無理
+
+
+## クロス
+- 複雑な形状をモデリングせずに作成
+- アニメーション時に追従
+  
+## クロス基本
+- 布のSizeのControl+Aでアプライ忘れずに
+- 細分化は50とか
+- Cloth, Collisionだけだと、布は自分を突き抜けちゃう
+- Cloth-Collision-Self Collisionで回避
+- ギザる時はModifier-SubdivisionSurface
+- Cloth, Subdivisionを入れ替えると精度あがるけど、時間がかかる
+- 毎回計算でなくBakeすることができる。Cache-Bake
+- VertexGroupでPinにして、ClothShapeのPinGroupに指定するとピン留めできる
+
+ここは、紹介くらいかなぁ
+- 選んだ頂点をVertex-Hook-Hook to New Objectにすると、他のObjectと関連づけられる
+- この時、Modifierの順をClothの前に持ってくることが重要
+
+https://www.youtube.com/watch?v=252qhBFl2UM
+
+### Tシャツ
+- 服を作ってみよう
+- 線でつないだところを縫わせることができる
+- とりあえず、簡単に上半身つくる
+- Planeから表の形を作る
+- Subdevide(中心に点がくるように)
+- Promotionalを使って、襟首つくる(頂点グループつくって、ShowHideすると安心)
+- OptionClickでつなぎあわせるところを選択
+- Edit-MenuSearch(F3)でBridgeEdgeLoopでつなぐ
+- Cで面を選択してから、
+- XのFacesで首のところを削除
+- 他はOnlyFacesで削除
+- 人体Collision, 服Cloth
+- ShapeのSewingにCheck,MaxSewingForceは100とか
+- 上手くいかない時は、隠れている頂点がないか(Option+H)、重なっている頂点がないか(M ByDistance)を確認しよう
+https://www.youtube.com/watch?v=R1OUUBEu1dE
+
+https://styly.cc/ja/tips/blender-cloth-simulation02/
+
+### クロスでアニメーション追従までいきたいな...
+https://www.youtube.com/watch?v=AbyfuW5Aocg
+
+
+## シュリンクラップモディファイアーも紹介？
+簡単にできるからやっちゃおう
+- cubeで服の形＋首、胴のFaceを削除
+- 服にシュリンクラップ。ターゲットでBodyで終わり
+https://horohorori.com/blender-note/modifiers/deform/about-shrinkwrap-modifier/
+
+## ソフトボディ
+https://www.youtube.com/watch?v=4lqUxQ2XN4o
+
+
+## パーティクル
+https://horohorori.com/blender-note/physics-simulations/about-particles-system/
+- emitter
+- hair
+
+https://www.youtube.com/watch?v=TWZgMg56YMQ
+https://www.youtube.com/watch?v=wHfR0DC-nQc
+
