--- a/2022/MediaRepresentationV/mr5_12.md
+++ b/2022/MediaRepresentationV/mr5_12.md
@@ -1,3 +1,134 @@
 # メディア表現V 12. シェーダーエディター
 
 [メディア表現V TOPに戻る](./index.md)
+
+---
+
+---
+
+
+## Node Wrangler
+- 検索してチェックを入れる
+- テキスチャセットアップ Ctrl+T
+- プリンシプルセットアップ Ctrl+Shift+T
+- 他も覚えていいけど
+
+https://vook.vc/n/2610
+
+## Materialの宝庫
+
+1. https://www.textures.com/
+Quantity: 160+ PBR materials, 340+ 3D Scans, and many more
+Quality: Up to 1K (Free), Up to 16+K (Premium)
+Downloads per Day: 15 Credits/Maps per Day
+2. https://3dtextures.me/
+By Joao Paulo 
+Quantity: around 400+
+Quality: Up to 1K for Patrons (Premium) up to 4K
+Downloads per Day: Unlimited
+
+3. https://freepbr.com/
+Quantity: 107
+Quality: Up to 2K
+Downloads per Day: Unlimited
+
+4. https://texturehaven.com/
+Quantity: 62
+Quality: Up to 8K
+Downloads per Day: Unlimited
+
+5. https://www.poliigon.com/
+Quantity: 52
+Quality: Up to 8K
+Downloads per Day: Unlimited
+
+6. https://cc0textures.com/
+By Struffel Productions
+Quantity: 210+
+Quality: Up to 8K
+Downloads per Day: Unlimited
+
+https://www.youtube.com/watch?v=Fi1UG-g1II4
+
+
+## サイトからダウンロードしてあててみよう
+- 2の3dtextures.meがログインいらないので、ここから
+- https://3dtextures.me/2022/02/25/fabric-lace-018/
+- CubeよりPlaneの方がわかりやすいかも
+- ShaderEditorにしてPrincipledBSDFを選択
+- Ctrl+Shift+TでMaterial_2038.jpg以外全部選択
+- 自動でやってくれたのはroughness, normal, height
+- 他は手動でやってみよう
+- 一つ複製して、左のベクターに接続、右からBaseColorに接続、ファイルをbasecolorに
+- 一つ複製して、左のベクターに接続、ColorSpaceはNonColor, ColorからAlphaへ,SettingsのBlendModeをAlphaBlendへShadowModeはAlphaHashedへ
+- Displacementをノードからできるのは、現状Cyclesだけ
+- Eeveeの場合には、モディファイアーを使おう
+- AmbientOcculusionもCyclesなので割愛します。
+
+https://www.tomog-storage.com/entry/Blender-Beginner-HowBlendModeAndShadowMode#%E3%82%A2%E3%83%AB%E3%83%95%E3%82%A1%E3%83%8F%E3%83%83%E3%82%B7%E3%83%A5
+https://www.youtube.com/watch?v=3Yfp4WbqO9A
+
+## B3DMatPack便利(Cyclesだけのものあり)
+https://www.youtube.com/watch?v=Zni54zJMnJY
+
+## 基本
+- マテリアル・シェーダー厳密には違うけど、「物体の色とか模様とか質感を定義するもの」くらい理解しておこう
+
+- 元ネタまんまになりそう..
+- Plane, Monkey追加して、同じマテリアルをあてておこう(必要に応じてSubdivisionSurface)
+- ベースカラー変更
+- Metalic, Specular, Roughnessについて値を変えてみよう。
+
+### RGB
+- 色も出せるけど、黒白で0-1の値を出力することも可能 Metalicに繋いでみよう
+
+### MixShaderを使ってみよう
+- EmissionとMixShader
+- Emissionはシーン設定のBloomにチェックを入れないときかない
+- Fracはバランスを表すよ
+- RGBをFracに繋いでみよう
+
+### 部分でバランスを変えてみよう
+- RGBを外す
+- ColorRampをFracに追加
+- Ctrl+Shift+クリックで、その出力がどうなっているかわかるよ
+- BrickTextureをColorRampの前へ(FacからFacへ)
+- BrickTextureを選択してCtrl+T
+- ColorRampを選択してCtrl+Shift+クリックで出力をみてみよう
+- Mappingのscaleをかえるといろいろかわるね
+- MixShaderを選択してCtrl+Shift+クリックで元に戻そう
+
+### 楽しもう
+- BrickTextureをVoronoiTexutureに変更しよう
+- BrickTexutureを選択してMを押すと非アクティブになる
+- Volonoiは白黒じゃなくて、グレーがあり、ランダムなのが特徴的
+- ColorRampの白を左にずらし、Constantにしよう
+- ColorRampは白黒で入ってきた情報を、違う色に変化することができるね。
+- VolonoiのScale50くらいにして、斑点を作ろう
+- ColorRampの白の位置を変えると、表示のされ方が変わるね。
+
+- PrincipledBSDFのBaseColorを黒に
+- EmissionのカラーをVolonoi使って、さまざまにするよ
+- TextureCordinateからColorRampを選択してShift+D(複製)
+- 出力をEmissionのカラーに
+- ColorRampに+をいくつか押して、いろんな色を設定しよう
+- Volonoidのscaleを#frameにすると、自動で変わるよ
+
+https://www.youtube.com/watch?v=0IaxvXUcQgA
+
+
+http://kutodatabase.com/kuto1970.shop/Works_BlenderMaterial.html
+
+
+
+## セルルック
+あれ、全然簡単
+- BSDFの出力に
+- シェーダーtoRGBで白黒にして
+- ColorRampで色光あたってる、あたってないを指示して終わり
+https://www.youtube.com/watch?v=Q2hYuCgBYlM
+
+## 理解する上で大事なこと
+- 通過している情報が、色情報だったり影情報だったりなんなのかを知ることは大事
+- 情報っていっても、2次元のデータで配列としてもっていることもある
+- #frame使うとシェーダーのアニメーションができる。計算式使えたはず。
