--- a/2022/MediaRepresentationV/mr5_13.md
+++ b/2022/MediaRepresentationV/mr5_13.md
@@ -1,3 +1,36 @@
 # メディア表現V 13. ジオメタリーノード
 
 [メディア表現V TOPに戻る](./index.md)
+
+---
+
+---
+
+
+## ジオメトリーノードって何？
+ジオメトリノードは、ノード（特定の処理を実行するブロックのこと。 複数のノードを繋げながら複雑な処理を表現する）インターフェイスを介してジオメトリ（オブジェクトの形状などに関する情報）を操作できるカスタムモディファイア。
+
+現在開発が進行形なので、可能性は無限大。
+
+自分で作るには数学とか強い方がいいかも。プログラミングに似ている。
+
+## BagaPie
+ジオメトリーノードを使ったAddOn紹介
+- インストール
+- Jを押してパイメニューから
+- 使い方紹介
+
+## 立方体から
+
+## ライト(Curve)
+https://www.youtube.com/watch?v=VoxYbGMtXRE
+
+## 簡単なのをいくつか試したい
+https://www.youtube.com/watch?v=KntGPD1k7v0
+https://www.youtube.com/watch?v=Se10ip872xQ
+https://www.youtube.com/watch?v=VGCadW0-hqw
+https://www.youtube.com/watch?v=2GOljXwSReA
+https://www.youtube.com/watch?v=tolqBEyiSs0
+https://www.youtube.com/watch?v=5iwt2fpUYWQ
+https://www.youtube.com/watch?v=NyUJ6XH8A94&t=21s
+https://www.youtube.com/watch?v=Y_u7ryvs2HU
