--- a/2022/MediaRepresentationV/mr5_14.md
+++ b/2022/MediaRepresentationV/mr5_14.md
@@ -1,3 +1,47 @@
 # メディア表現V 14. コンポジット・動画編集
 
 [メディア表現V TOPに戻る](./index.md)
+
+---
+
+---
+
+
+## レンダリングしただけだと？
+3D空間のものを画像として書き出しただけ。リアルにならない。
+動画と重ね合わせるには、影など様々なデータを組み合わせて自然な形に合成する必要がある。
+カメラの特性に合わせて歪ませたり等も必要。
+モーショントラッキング用に使うマーカーを消す「バレ消し」もコンポジットの作業となる
+AfterEffectを使ってもいいし、Blenderで行ってもOK。(Nuke,Natron)
+
+## レイヤーベース ノードベース
+
+
+## コンポジット 何ができるか
+CyclesのDenoise
+
+https://www.youtube.com/watch?v=hprVvGtGqoY
+-Intro 0:00
+-Denoising 0:15
+-Color Grading 2:11
+-Lens dispersion 3:24
+-Light beams 4:26
+-Lens Dirt 5:27
+
+https://www.youtube.com/watch?v=jhTPI6QJQNg
+
+https://www.youtube.com/watch?v=gDXTMo31QSM
+
+https://www.youtube.com/watch?v=43RpGoA-KNU
+
+https://www.youtube.com/watch?v=JzODa47pdS8
+
+https://www.youtube.com/watch?v=JzODa47pdS8
+
+https://www.youtube.com/watch?v=5HTI59gBW3s
+
+## 動画編集 何ができるか
+しょうかいだけでもいいか？
+
+
+
