--- a/2022/MediaRepresentationV/mr5_15.md
+++ b/2022/MediaRepresentationV/mr5_15.md
@@ -1,3 +1,44 @@
 # メディア表現V 15. モーショントラッキング
 
 [メディア表現V TOPに戻る](./index.md)
+
+---
+
+---
+
+
+## 原理
+
+## やってみよう
+- VFXで新規書類
+- OPENで映像を開く
+- Sceneの設定を合わせるSetSceneFrame(尺)、fps・解像度はて入力
+- 再生して紫の線を確認
+- MotionModelをLoc,Rot,Sca
+- (Cameraのプリセット合わせた方がいいけど)
+- 1フレーム目へ
+- Ctrl+クリックで、マーカーを置いていく(8個以上ないといけない)
+- うまくトラックできない場合はOption+Sで探すエリアを広めに
+- Solveパネルにして、SolveCameraMotion
+- Solve Errorが1を下回ると最高
+- Refineを入れて、Solveすると減ることも。
+
+- SetAsBackgroudで背景に動画を設定
+- SetupTrackingSceneでPlane, Cube, Cameraをセット
+- 3点選んで(原点とX,Y軸方向にあるもの)Floor
+- 原点を選んでSetOrigin
+- Xを選んでSetXAxis, Yを選んでSetYAxis
+- Three tracks with bundles are needed to orient the floorが出る時は、Solveが失敗
+- 
+- 本当は、レンズの焦点距離とか歪みとかも計算にいれるともっとよい
+
+- Susanneでもおいて
+- Sceneで、FilmのTransparentにチェックを入れて、Plane, Cubeを非表示にして、
+- RenderLayerのAlpha->facでいけるかな(動画対応してないので、いちいちレンダリングするか、PNG,OpenEXRの方がいいかも)
+
+
+## 参考
+https://www.youtube.com/watch?v=V62Ow3SXE6c
+
+## まとめ
+
