--- a/2022/MediaRepresentationV/mr5_01.md
+++ b/2022/MediaRepresentationV/mr5_01.md
@@ -78,6 +78,7 @@
 
 ## 心構え
 - 好きになろう(楽しもう)。モチベが大事。とにかく触ろう。
+- 多くのことができるので、興味があるところから重点的に取り組もう。(授業だから順番にやるけどcd)
 - Twitterで「Blender」ぐぐると、初心者たくさんいて刺激になるよ
 - まずはチュートリアル見ながらすげー！と思おう。
 - なるべく15分くらいのチュートリアルやってみよう。(長いとめげる)
