--- a/2022/MediaRepresentationV/mr5_01.md
+++ b/2022/MediaRepresentationV/mr5_01.md
@@ -8,11 +8,12 @@
   - [目次](#目次)
   - [シラバス紹介](#シラバス紹介)
     - [授業のねらい及び到達目標](#授業のねらい及び到達目標)
-    - [授業の形式・計画(1回あたり175文字以内)](#授業の形式計画1回あたり175文字以内)
+    - [授業の形式・計画](#授業の形式計画)
   - [利用するアプリについて](#利用するアプリについて)
     - [Blenderについて](#blenderについて)
     - [Blender Overview](#blender-overview)
     - [他の3D系アプリについて](#他の3d系アプリについて)
+  - [授業の進め方](#授業の進め方)
   - [心構え](#心構え)
     - [いろんなリンク](#いろんなリンク)
   - [Blenderインストール](#blenderインストール)
@@ -27,6 +28,8 @@
     - [ライブラリから追加してみよう](#ライブラリから追加してみよう)
     - [Objectの操作について](#objectの操作について)
     - [Renderについて](#renderについて)
+    - [スクリーンキャストについて](#スクリーンキャストについて)
+
 ---
 
 ## シラバス紹介
@@ -36,7 +39,7 @@
 1. Blenderを用いてコンテンツ制作ができる。
 2. 状況に応じて適切な技術を用いて表現力豊かな制作ができる。
 
-### 授業の形式・計画(1回あたり175文字以内)
+### 授業の形式・計画
 1. オリエンテーション
 2. Blender基本操作
 3. モデリング
@@ -75,16 +78,20 @@
 - 参考[エヴァ制作のカラーがBlenderへの移行を進める理由とは？](https://japanese.engadget.com/jp-2019-08-14-blender-khara.html){:target="_blank"}
 
 --- 
+## 授業の進め方
+- 毎回、トピックを決めて取り組んでもらう。
+- 3Dを使いこなすには数学や物理法則等を知る必要があるけど、必要最低限にとどめて「使う」ことをメインに進めていく。
+- 慣れてから技術的な背景については必要に応じて学んでいこう。
 
 ## 心構え
 - 好きになろう(楽しもう)。モチベが大事。とにかく触ろう。
-- 多くのことができるので、興味があるところから重点的に取り組もう。(授業だから順番にやるけどcd)
+- 多くのことができるので、興味があるところから重点的に取り組もう。(授業だから順番にやるけど)
 - Twitterで「Blender」ぐぐると、初心者たくさんいて刺激になるよ
 - まずはチュートリアル見ながらすげー！と思おう。
 - なるべく15分くらいのチュートリアルやってみよう。(長いとめげる)
 - みないでできるようになってみよう。
 - 自分なりのアレンジを加えてみよう。
-- 他の人に見てもらうのも励みになる
+- 他の人に見てもらうのも励みになる。
 - ある程度わかったところで体系的に何ができるか学ぼう。
 
 ### いろんなリンク
@@ -147,7 +154,8 @@
 - [Blender公式サイト](https://www.blender.org/){:target="_blank"}
 - Download - Demo Files - Cube Diolama
 - 書類-Blender-DemoFilesフォルダを作成してそこに移動
-- zipファイルを解凍して.blendファイルを開いてみよう。
+- zipファイルを解凍しよう。
+- オリジナルは取っておきたいから、.blendファイルをコピーして開いてみよう。
 
 ### viewportの視点操作
 #### トラックパッド
@@ -174,3 +182,9 @@
 - Render Imageとすると時間かかるね。かかるんです。たくさんいろんな計算をしてる
 - Eeveeにしてみよう。はやくなるね！
 - Blenderではコンピュータに負荷をかけないように、どのようにつくるか、ということも必要なこと
+
+### スクリーンキャストについて
+- BlenderのAddonの[screencastkey](https://www.cgradproject.com/archives/5495/){:target="_blank"}だけでいきたいのだけど、不備あり
+- 今日は扱わないけど、G,R,Sを押した後のX,Y,Zが表示されない。
+- そのため[keycastr](https://softantenna.com/blog/keycastr/){:target="_blank"}も併用するよ。
+
