--- a/2022/MediaRepresentationV/mr5_02.md
+++ b/2022/MediaRepresentationV/mr5_02.md
@@ -3,6 +3,30 @@
 [メディア表現V TOPに戻る](./index.md)
 
 ---
+## 目次
+
+- [メディア表現V 2. Blender基本操作](#メディア表現v-2-blender基本操作)
+  - [目次](#目次)
+  - [前回のおさらい](#前回のおさらい)
+  - [Blenderの基本操作](#blenderの基本操作)
+  - [今日できるようになる作品](#今日できるようになる作品)
+  - [マウス・テンキーについて](#マウステンキーについて)
+  - [基本操作](#基本操作)
+    - [画面構成](#画面構成)
+    - [3D Viewportの視点操作](#3d-viewportの視点操作)
+    - [オブジェクトの移動・回転・拡大縮小](#オブジェクトの移動回転拡大縮小)
+    - [オブジェクトの選択](#オブジェクトの選択)
+    - [その他](#その他)
+  - [やってみようPart1](#やってみようpart1)
+  - [やってみようPart2](#やってみようpart2)
+    - [下準備](#下準備)
+    - [物理エンジンの実験](#物理エンジンの実験)
+    - [たくさん積もう](#たくさん積もう)
+    - [スザンヌの用意](#スザンヌの用意)
+    - [スザンヌ光らせてみよう](#スザンヌ光らせてみよう)
+    - [ライティング](#ライティング)
+    - [カメラの位置を設定](#カメラの位置を設定)
+    - [書き出し](#書き出し)
 
 ---
 
@@ -66,7 +90,7 @@ Macの基本操作やAdobeの基本操作とまた違う操作体系を持って
 元からあるCube(立方体)を中心に、X軸、Y軸、Z軸に
 - 複製(Shift+D)
 - Gを押して、X,Y,Zのどれかを押して、Ctrlを押して場所を確定して、クリック
-- YYYYMMDDt_mr_v_day02_01.blendとして保存しよう
+- YYYYMMDDt_mr5_02_01.blendとして保存しよう
 
 ## やってみようPart2
 基本操作を使って積むのが目的だけど、作品にしてみよう。
@@ -74,6 +98,7 @@ Macの基本操作やAdobeの基本操作とまた違う操作体系を持って
 
 ### 下準備
 - File-New-Generalで新しいファイルを作成
+- File-SaveでYYYYMMDDt_mr5_02_02.blend
 - LightはXで削除
 - CubeをZ軸に沿って5m上に移動
 - Shift+AでMesh-Planeを追加
