--- a/2022/MediaRepresentationV/mr5_01.md
+++ b/2022/MediaRepresentationV/mr5_01.md
@@ -19,6 +19,7 @@
     - [いろんなリンク](#いろんなリンク)
   - [Blenderインストール](#blenderインストール)
     - [LTS使う人(バグなどの時用)](#lts使う人バグなどの時用)
+  - [!アプリのバージョンの選び方](#)
   - [言語設定について(個人的には英語推奨)](#言語設定について個人的には英語推奨)
   - [画面を有効に使おう](#画面を有効に使おう)
   - [ファイルの管理について](#ファイルの管理について)
@@ -109,12 +110,16 @@
 4. 「Download Blender3.0.1」をクリック
 5. ディスクイメージを開けて、Blenderをアプリケーションフォルダにコピー
 
+[![](https://img.youtube.com/vi/bLQEbp7DbgM/0.jpg)](https://www.youtube.com/watch?v=bLQEbp7DbgM){:target="_blank"}
+
 ### LTS使う人(バグなどの時用)
 - [DownloadのLong-term-support](https://www.blender.org/download/lts/){:target="_blank"}からダウンロードできる
 - アプリケーションフォルダに「Blender2.93LTS」とかフォルダ作成し、その中に入れることで、複数のバージョンを使うことが可能。
 - Command+スペースでBlenderを検索した時に、フォルダ名が出るので、どっちをつかっているかわかるよ
 - Winの人は[BlenderHub](https://3dnchu.com/archives/blenderhub-1-1-0/){:target="_blank"}を導入しよう。(必要に応じて)
 
+![複数バージョンの入れ方](img/mr5-01-01.png)
+![アプリのバージョンの選び方](img/mr5-01-02.png)
 ---
 
 ## 言語設定について(個人的には英語推奨)
