--- a/2022/MediaRepresentationV/mr5_01.md
+++ b/2022/MediaRepresentationV/mr5_01.md
@@ -19,7 +19,7 @@
     - [いろんなリンク](#いろんなリンク)
   - [Blenderインストール](#blenderインストール)
     - [LTS使う人(バグなどの時用)](#lts使う人バグなどの時用)
-  - [!アプリのバージョンの選び方](#)
+  - [起動しよう](#起動しよう)
   - [言語設定について(個人的には英語推奨)](#言語設定について個人的には英語推奨)
   - [画面を有効に使おう](#画面を有効に使おう)
   - [ファイルの管理について](#ファイルの管理について)
@@ -76,8 +76,8 @@
 - 特に3Dでは用途に応じていろいろなアプリがあるため、便利に使いわければ良い
 - Blenderはずっと無料、Mayaは学生の間だけ無料だが、その後は年間数十万かかる
 - プロはMayaと言われていたが、最近ではゲーム業界・アニメ業界にてBlenderも使われ始めている
-- 参考[『シン・エヴァ』で3DCGを手がけたプロジェクトスタジオQ、Blenderの魅力を語る](https://news.mynavi.jp/article/20210804-1927380/){:target="_blank"}
-- 参考[エヴァ制作のカラーがBlenderへの移行を進める理由とは？](https://japanese.engadget.com/jp-2019-08-14-blender-khara.html){:target="_blank"}
+- 参考 [『シン・エヴァ』で3DCGを手がけたプロジェクトスタジオQ、Blenderの魅力を語る](https://news.mynavi.jp/article/20210804-1927380/){:target="_blank"}
+- 参考 [エヴァ制作のカラーがBlenderへの移行を進める理由とは？](https://japanese.engadget.com/jp-2019-08-14-blender-khara.html){:target="_blank"}
 
 --- 
 ## 授業の進め方
@@ -120,7 +120,13 @@
 
 ![複数バージョンの入れ方](img/mr5-01-01.png)
 ![アプリのバージョンの選び方](img/mr5-01-02.png)
+
 ---
+## 起動しよう
+- とりあえずそのまま何もせずに「Save New Setting」を押そう。
+- ~Library/Application Support/Blenderの中にバージョンごとに設定ファイルができるよ。
+- 3.0.0と3.0.1は兼用だけど、3.0と3.1は別になるみたい。
+- ここには設定と、追加されたAddOnのファイルが入るよ。
 
 ## 言語設定について(個人的には英語推奨)
 - チュートリアル動画には英語・日本語がある。
@@ -137,7 +143,7 @@
 
 ## 画面を有効に使おう
 - iMacではBlender, Webページを両方おくことができるが、ノートパソコンなら、三本指でスワイプして2画面をうまく使いこなそう。
-- [EasyRes](https://apps.apple.com/jp/app/easyres/id688211836?mt=12){:target="_blank"}を使うと、標準より解像度をさらに広げることができる。文字は小さくなるけど便利。(自分は2048*1280)
+- [EasyRes](https://apps.apple.com/jp/app/easyres/id688211836?mt=12){:target="_blank"}を使うと、Macの標準設定より解像度をさらに広げることができる。文字は小さくなるけど便利。(自分は2048*1280)
 
 
 ---
