--- a/2022/MediaRepresentationV/mr5_01.md
+++ b/2022/MediaRepresentationV/mr5_01.md
@@ -33,7 +33,6 @@
     - [スクリーンキャストについて](#スクリーンキャストについて)
 
 ---
-
 ## シラバス紹介
 ### 授業のねらい及び到達目標
 映像制作のCG/VFXは凄まじい進化を遂げている。無料で利用できるオープンソースの統合型3DCG製作・2Dアニメーション製作・VFX向けデジタル合成・動画編集ソフトウェアであるBlenderを用いて、「デジタルコンポジット」「モーショングラフィックス」「VFX」について理解し、制作技術を高める。
@@ -128,6 +127,8 @@
 - 3.0.0と3.0.1は兼用だけど、3.0と3.1は別になるみたい。
 - ここには設定と、追加されたAddOnのファイルが入るよ。
 
+[![](https://img.youtube.com/vi/OY52BjtaylI/0.jpg)](https://www.youtube.com/watch?v=OY52BjtaylI){:target="_blank"}
+
 ## 言語設定について(個人的には英語推奨)
 - チュートリアル動画には英語・日本語がある。
 - 英語がどうしても苦手な人は日本語設定にしよう。
@@ -139,12 +140,15 @@
 - Macでは編集-プリファレンス、キーマップ、ウィンドウのToggleTranslated UIで、「[」とかに変えておこう。
 - 文字のところをクリックしてから「[」で切り替え
 
+[![](https://img.youtube.com/vi/bdDha-EfAb4/0.jpg)](https://www.youtube.com/watch?v=bdDha-EfAb4){:target="_blank"}
+
 ---
 
 ## 画面を有効に使おう
 - iMacではBlender, Webページを両方おくことができるが、ノートパソコンなら、三本指でスワイプして2画面をうまく使いこなそう。
 - [EasyRes](https://apps.apple.com/jp/app/easyres/id688211836?mt=12){:target="_blank"}を使うと、Macの標準設定より解像度をさらに広げることができる。文字は小さくなるけど便利。(自分は2048*1280)
 
+[![](https://img.youtube.com/vi/x9oyb64Snpk/0.jpg)](https://www.youtube.com/watch?v=x9oyb64Snpk){:target="_blank"}
 
 ---
 ## ファイルの管理について
@@ -157,7 +161,10 @@
 オリジナル
 : 20220401o_domino.blend
 
+- 自分でわかれば問題はないけど。あとで何をいつやったかわかると便利。
 - 参考にしたページやYouTubeをTextEditorで書いておくと忘れないので便利
+
+
 
 ---
 
