--- a/2022/MediaRepresentationV/mr5_01.md
+++ b/2022/MediaRepresentationV/mr5_01.md
@@ -30,7 +30,8 @@
     - [ライブラリから追加してみよう](#ライブラリから追加してみよう)
     - [Objectの操作について](#objectの操作について)
     - [Renderについて](#renderについて)
-    - [スクリーンキャストについて](#スクリーンキャストについて)
+    - [(おまけ)スクリーンキャストについて](#おまけスクリーンキャストについて)
+    - [お疲れ様でした〜](#お疲れ様でした)
 
 ---
 ## シラバス紹介
@@ -164,8 +165,9 @@
 - 自分でわかれば問題はないけど。あとで何をいつやったかわかると便利。
 - 参考にしたページやYouTubeをTextEditorで書いておくと忘れないので便利
 
+[![](https://img.youtube.com/vi/kMhdw7_7RV8/0.jpg)](https://www.youtube.com/watch?v=kMhdw7_7RV8){:target="_blank"}
 
-
+---
 ---
 
 ## 物をおいてみよう
@@ -176,6 +178,8 @@
 - zipファイルを解凍しよう。
 - オリジナルは取っておきたいから、.blendファイルをコピーして開いてみよう。
 
+[![](https://img.youtube.com/vi/h66Vk1QVdUQ/0.jpg)](https://www.youtube.com/watch?v=h66Vk1QVdUQ){:target="_blank"}
+
 ### viewportの視点操作
 #### トラックパッド
 - 視点回転は2本指
@@ -183,11 +187,15 @@
 - 拡大縮小はCtrl＋2本指 or ピンチイン・ピンチアウト
 - 上手くいかない人は、システム環境設定のトラックパッドを確認
 
+[![](https://img.youtube.com/vi/l0kEjQBoSw4/0.jpg)](https://www.youtube.com/watch?v=l0kEjQBoSw4){:target="_blank"}
+
 #### マウス
 - ホイール付きマウスは、ホイールが中ボタンとなっている
 - 視点回転は中ボタンドラッグ
 - 視点平行移動はShift+中ボタンドラッグ
 - 拡大縮小はホイールを回転
+
+[![](https://img.youtube.com/vi/ZlMrsKP7OYE/0.jpg)](https://www.youtube.com/watch?v=ZlMrsKP7OYE){:target="_blank"}
 
 ### ライブラリから追加してみよう
 - Materialは材質を変える
@@ -197,13 +205,24 @@
 - 消すのはX
 - Tを押すとツールパネルがでてくるので、移動、回転ツールをセレクトしてGIZMOで動かそう
 
+[![](https://img.youtube.com/vi/rOb0aQijrWE/0.jpg)](https://www.youtube.com/watch?v=rOb0aQijrWE){:target="_blank"}
+
+
+
 ### Renderについて
 - Render Imageとすると時間かかるね。かかるんです。たくさんいろんな計算をしてる
 - Eeveeにしてみよう。はやくなるね！
 - Blenderではコンピュータに負荷をかけないように、どのようにつくるか、ということも必要なこと
 
-### スクリーンキャストについて
+[![](https://img.youtube.com/vi/3RmVMgBwSvk/0.jpg)](https://www.youtube.com/watch?v=3RmVMgBwSvk){:target="_blank"}
+
+
+### (おまけ)スクリーンキャストについて
 - BlenderのAddonの[screencastkey](https://www.cgradproject.com/archives/5495/){:target="_blank"}だけでいきたいのだけど、不備あり
 - 今日は扱わないけど、G,R,Sを押した後のX,Y,Zが表示されない。
 - そのため[keycastr](https://softantenna.com/blog/keycastr/){:target="_blank"}も併用するよ。
 
+[![](https://img.youtube.com/vi/k31YeGaZUKU/0.jpg)](https://www.youtube.com/watch?v=k31YeGaZUKU){:target="_blank"}
+
+
+### お疲れ様でした〜
