--- a/2022/MediaRepresentationV/mr5_01.md
+++ b/2022/MediaRepresentationV/mr5_01.md
@@ -31,7 +31,7 @@
     - [Objectの操作について](#objectの操作について)
     - [Renderについて](#renderについて)
     - [(おまけ)スクリーンキャストについて](#おまけスクリーンキャストについて)
-    - [お疲れ様でした〜](#お疲れ様でした)
+  - [お疲れ様でした〜](#お疲れ様でした)
 
 ---
 ## シラバス紹介
@@ -225,4 +225,4 @@
 [![](https://img.youtube.com/vi/k31YeGaZUKU/0.jpg)](https://www.youtube.com/watch?v=k31YeGaZUKU){:target="_blank"}
 
 
-### お疲れ様でした〜
+## お疲れ様でした〜
