--- a/2022/MediaRepresentationV/mr5_02.md
+++ b/2022/MediaRepresentationV/mr5_02.md
@@ -9,14 +9,15 @@
   - [目次](#目次)
   - [前回のおさらい](#前回のおさらい)
   - [Blenderの基本操作](#blenderの基本操作)
+    - [マウス・テンキーについて](#マウステンキーについて)
   - [今日できるようになる作品](#今日できるようになる作品)
-  - [マウス・テンキーについて](#マウステンキーについて)
   - [基本操作](#基本操作)
     - [画面構成](#画面構成)
     - [3D Viewportの視点操作](#3d-viewportの視点操作)
     - [オブジェクトの移動・回転・拡大縮小](#オブジェクトの移動回転拡大縮小)
     - [オブジェクトの選択](#オブジェクトの選択)
     - [その他](#その他)
+    - [チートシート](#チートシート)
   - [やってみようPart1](#やってみようpart1)
   - [やってみようPart2](#やってみようpart2)
     - [下準備](#下準備)
@@ -34,15 +35,25 @@
 ## 前回のおさらい
 - viewportでの視点回転・視点平行移動・拡大縮小(2本指・Shift+2本指,Ctrl+2本指)
 - 消去(X)
+- T(または左上の小名矢印)で左のツールパネルの開閉
+
+---
 
 ## Blenderの基本操作
 Macの基本操作やAdobeの基本操作とまた違う操作体系を持っているため、最初は戸惑うと思う。
 でも、Blender内ではどこでもその操作がほぼ有効になるため、最初だけちょっと頑張ってみよう。
 
+### マウス・テンキーについて
+マウス・テンキーがあった方が便利という意見がある。しかし、作業するのにマウス・テンキーがなくてもノートパソコンのみで作業できるメリットも大きい。そのため、マウス・テンキーについても多少は触れるが、基本はトラックパッドでの操作を中心に授業を進めていく。
+
+
+---
+
 ## 今日できるようになる作品
 
-## マウス・テンキーについて
-マウス・テンキーがあった方が便利という意見がある。しかし、作業するのにマウス・テンキーがなくてもノートパソコンのみで作業できるメリットも大きい。そのため、マウス・テンキーについても多少は触れるが、基本はトラックパッドでの操作を中心に授業を進めていく。
+<!-- MOVIE TODO mr5_02_01Work2.mp4-->
+
+---
 
 ## 基本操作
 ### 画面構成
@@ -54,11 +65,15 @@ Macの基本操作やAdobeの基本操作とまた違う操作体系を持って
 - プロパティ
 - ステータスバー
 
+![Blenderの画面構成](img/mr5-02-01.png)
+
+前回行ったように、エリアの分割・統合、役割の変更はかなり自由ではあるが、まずはこの初期画面レイアウトに慣れるとよい。
+
 ### 3D Viewportの視点操作
 - ナビゲーションギズモを利用することで、簡単に見る方向を指定できる(テンキーでも可)
 - viewportでの視点回転・視点平行移動・拡大縮小(2本指・Shift+2本指,Ctrl+2本指)
 - 拡大縮小・視点平行移動は「+」「手」のアイコンでも可能
-- カメラの見え方については、「カメラ」のアイコン
+- カメラからの見え方については、「カメラ」のアイコン
 
 ### オブジェクトの移動・回転・拡大縮小
 - G:移動(グラブ)
@@ -86,15 +101,36 @@ Macの基本操作やAdobeの基本操作とまた違う操作体系を持って
 - Tでツールバー、Nでサイドバー
 - パラメータを変更した後、iを押すと、キーフレームが追加
 
+### チートシート
+- 操作を忘れないようにまとめたものをチートシートという
+- 全部覚えなきゃいけないの？と考えると大変
+- 何回も触っていくと自然に覚えていくので、「これは使った」と印つけていくとよいかも
+
+[![Blender チートシート](https://2.bp.blogspot.com/-EpIVpOGFHYI/XuGTbz7skEI/AAAAAAAACdA/7zx2iybU85AqJfUROEHu1NACRXI5aeCUgCLcBGAsYHQ/s1600/20200611.jpg)](http://rt3dcg.blogspot.com/2019/02/blender280-cheatsheet.html){:target="_blank"}
+
+<!-- MOVIE TODO mr5_02_02Operation.mp4-->
+
+---
+---
+
 ## やってみようPart1
+
+![作品1](img/mr5-02-02.png)
 元からあるCube(立方体)を中心に、X軸、Y軸、Z軸に
 - 複製(Shift+D)
 - Gを押して、X,Y,Zのどれかを押して、Ctrlを押して場所を確定して、クリック
 - YYYYMMDDt_mr5_02_01.blendとして保存しよう
 
+<!-- MOVIE TODO mr5_02_03Task1.mp4-->
+
+---
+---
+
 ## やってみようPart2
 基本操作を使って積むのが目的だけど、作品にしてみよう。
 マテリアル・物理エンジン・アニメ・ライト・カメラの設定レンダリングまでやるよ。
+
+<!-- MOVIE TODO mr5_02_04Task2.mp4-->
 
 ### 下準備
 - File-New-Generalで新しいファイルを作成
