--- a/2022/MediaRepresentationV/mr5_02.md
+++ b/2022/MediaRepresentationV/mr5_02.md
@@ -35,12 +35,12 @@
 ## 前回のおさらい
 - viewportでの視点回転・視点平行移動・拡大縮小(2本指・Shift+2本指,Ctrl+2本指)
 - 消去(X)
-- T(または左上の小名矢印)で左のツールパネルの開閉
+- 左のツールパネルの開閉(Tまたは左上の小さい矢印)
 
 ---
 
 ## Blenderの基本操作
-Macの基本操作やAdobeの基本操作とまた違う操作体系を持っているため、最初は戸惑うと思う。
+Macの基本操作やAdobeの基本操作と異なる操作体系を持っているため、最初は戸惑うと思う。
 でも、Blender内ではどこでもその操作がほぼ有効になるため、最初だけちょっと頑張ってみよう。
 
 ### マウス・テンキーについて
@@ -74,6 +74,9 @@ Macの基本操作やAdobeの基本操作とまた違う操作体系を持って
 - viewportでの視点回転・視点平行移動・拡大縮小(2本指・Shift+2本指,Ctrl+2本指)
 - 拡大縮小・視点平行移動は「+」「手」のアイコンでも可能
 - カメラからの見え方については、「カメラ」のアイコン
+
+![3D Viewportの視点操作](img/mr5-02-02.png)
+
 
 ### オブジェクトの移動・回転・拡大縮小
 - G:移動(グラブ)
@@ -115,7 +118,7 @@ Macの基本操作やAdobeの基本操作とまた違う操作体系を持って
 
 ## やってみようPart1
 
-![作品1](img/mr5-02-02.png)
+![作品1](img/mr5-02-03.png)
 元からあるCube(立方体)を中心に、X軸、Y軸、Z軸に
 - 複製(Shift+D)
 - Gを押して、X,Y,Zのどれかを押して、Ctrlを押して場所を確定して、クリック
