--- a/2022/MediaRepresentationV/mr5_02.md
+++ b/2022/MediaRepresentationV/mr5_02.md
@@ -123,6 +123,7 @@ Macの基本操作やAdobeの基本操作と異なる操作体系を持ってい
 - 複製(Shift+D)
 - Gを押して、X,Y,Zのどれかを押して、Ctrlを押して場所を確定して、クリック
 - YYYYMMDDt_mr5_02_01.blendとして保存しよう
+- NoteEditorでメモ書き忘れずに
 
 <!-- MOVIE TODO mr5_02_03Task1.mp4-->
 
@@ -138,6 +139,7 @@ Macの基本操作やAdobeの基本操作と異なる操作体系を持ってい
 ### 下準備
 - File-New-Generalで新しいファイルを作成
 - File-SaveでYYYYMMDDt_mr5_02_02.blend
+- NoteEditorでメモ書き忘れずに
 - LightはXで削除
 - CubeをZ軸に沿って5m上に移動
 - Shift+AでMesh-Planeを追加
