--- a/2022/MediaRepresentationV/mr5_02.md
+++ b/2022/MediaRepresentationV/mr5_02.md
@@ -28,6 +28,7 @@
     - [ライティング](#ライティング)
     - [カメラの位置を設定](#カメラの位置を設定)
     - [書き出し](#書き出し)
+  - [お疲れ様〜](#お疲れ様)
 
 ---
 
@@ -205,4 +206,10 @@ Macの基本操作やAdobeの基本操作と異なる操作体系を持ってい
 - File FormatはFFmpegVideo, EncodingをMPEG-4に
 - 一応、Render Imageで確認してみる。1フレームなら数秒でレンダリング完了するはず
 - よさげなら、Render Animation
+
+---
+---
+
+## お疲れ様〜
+余裕があれば、今日学んだことを使っていろいろ作ってみよう
   
